--- a/staging.yml
+++ b/staging.yml
@@ -22,7 +22,7 @@ services:
       - nginx
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - /volumes/idealist/templates/nginx-compose.v2.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - nginx-compose.v2.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     
   letsencrypt-nginx-proxy-companion:
@@ -49,7 +49,7 @@ services:
       - 'SECRET=super secret secret'
       - VIRTUAL_HOST=api.idealist.dorsaydevelopment.ca
       - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=80
+      - VIRTUAL_PORT=9001
       - LETSENCRYPT_HOST=api.idealist.dorsaydevelopment.ca
       - LETSENCRYPT_EMAIL=dorsay@live.ca
       
@@ -60,7 +60,7 @@ services:
   web:
     image: 'dorsaydevelopment/idealist-web:staging'
     ports:
-      - '9001:80'
+      - '9000:80'
     links:
       - api
     restart: always
@@ -69,7 +69,7 @@ services:
     environment:
       - VIRTUAL_HOST=idealist.dorsaydevelopment.ca
       - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=80
+      - VIRTUAL_PORT=9000
       - LETSENCRYPT_HOST=idealist.dorsaydevelopment.ca
       - LETSENCRYPT_EMAIL=dorsay@live.ca
     
