--- a/staging.yml
+++ b/staging.yml
@@ -22,7 +22,7 @@ services:
       - nginx
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx-compose.v2.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - .:/etc/docker-gen/templates:ro
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     
   letsencrypt-nginx-proxy-companion:
