--- a/staging.yml
+++ b/staging.yml
@@ -18,6 +18,7 @@ services:
       - '443:443'
     networks:
       - proxy-tier
+    entrypoint: -wait 5s:30s
       
   nginx-gen:
     image: jwilder/docker-gen
