--- a/staging.yml
+++ b/staging.yml
@@ -39,6 +39,7 @@ services:
       - /volumes/idealist/certs:/etc/nginx/certs:rw
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+      - DEBUG=true
      
      
   api:
