--- a/staging.yml
+++ b/staging.yml
@@ -24,7 +24,7 @@ services:
     container_name: nginx-gen
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx.tmpl/:/etc/docker-gen/templates/nginx.tmpl:ro
+      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
     volumes_from:
       - nginx
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
@@ -39,7 +39,6 @@ services:
       - /volumes/idealist/certs:/etc/nginx/certs:rw
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
-      - DEBUG=true
      
      
   api:
