--- a/production.yml
+++ b/production.yml
@@ -1,88 +1,78 @@
-version: '2'
-
-services:
+nginx:
+  image: nginx
+  container_name: nginx
+  volumes: 
+    - /etc/nginx/conf.d
+    - /etc/nginx/vhost.d
+    - /usr/share/nginx/html
+    - /volumes/idealist/certs:/etc/nginx/certs:ro
+  ports:
+    - '80:80'
+    - '443:443'
+    
+nginx-gen:
+  image: jwilder/docker-gen
+  container_name: nginx-gen
+  volumes:
+    - /var/run/docker.sock:/tmp/docker.sock:ro
+    - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+  volumes_from:
+    - nginx
+  entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
   
-  nginx:
-    image: nginx
-    container_name: nginx
-    volumes: 
-      - /etc/nginx/conf.d
-      - /etc/nginx/vhost.d
-      - /usr/share/nginx/html
-      - /volumes/idealist/certs:/etc/nginx/certs:ro
-    ports:
-      - '80:80'
-      - '443:443'
-    networks:
-      - proxy-tier
-      
-  nginx-gen:
-    image: jwilder/docker-gen
-    volumes_from:
-      - nginx
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - /volumes/idealist/templates/nginx-compose.v2.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+letsencrypt-nginx-proxy-companion:
+  image: jrcs/letsencrypt-nginx-proxy-companion
+  container_name: letsencrypt-nginx-proxy-companion
+  volumes_from:
+    - nginx
+  volumes:
+    - /var/run/docker.sock:/var/run/docker.sock:ro
+    - /volumes/idealist/certs:/etc/nginx/certs:rw
+  environment:
+    - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
     
-  letsencrypt-nginx-proxy-companion:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
-    volumes_from:
-      - nginx
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /volumes/idealist/certs:/etc/nginx/certs:rw
-    environment:
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
-      
-   
-  api:
-    image: 'dorsaydevelopment/idealist-api:latest'
-    ports:
-      - '9000:80'
-    links:
-      - db
-    environment:
-      - 'DB_CONN=db://db/idealist'
-      - NODE_ENV=production
-      - 'SECRET=super secret secret'
-      - VIRTUAL_HOST=api.idealist.dorsaydevelopment.ca
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=api.idealist.dorsaydevelopment.ca
-      - LETSENCRYPT_EMAIL=dorsay@live.ca
-      
-    restart: always
-    networks:
-      - proxy-tier
-
-  web:
-    image: 'dorsaydevelopment/idealist-web:latest'
-    ports:
-      - '9001:80'
-    links:
-      - api
-    restart: always
-    networks:
-      - proxy-tier
-    environment:
-      - VIRTUAL_HOST=idealist.dorsaydevelopment.ca
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=idealist.dorsaydevelopment.ca
-      - LETSENCRYPT_EMAIL=dorsay@live.ca
     
-  db:
-    image: 'mongo:latest'
-    volumes:
-      - /volumes/idealist/db:/data/db
-    ports:
-      - '27017:27017'
-    networks:
-    - proxy-tier
+api:
+  image: 'dorsaydevelopment/idealist-api:latest'
+  container_name: api
+  links:
+    - db
+  volumes:
+    - ./production/api/conf.d/:/etc/nginx/conf.d
+  environment:
+    - 'DB_CONN=mongodb://db/idealist'
+    - NODE_ENV=production
+    - 'SECRET=super secret secret'
+    - VIRTUAL_HOST=api.idealist-app.com
+    - VIRTUAL_NETWORK=nginx-proxy
+    - VIRTUAL_PORT=80
+    - LETSENCRYPT_HOST=api.idealist-app.com
+    - LETSENCRYPT_EMAIL=dorsay@live.ca
+    # - LETSENCRYPT_TEST=true
     
-networks:
-  proxy-tier:
-    external:
-      name: nginx-proxy
+  restart: always
+  
+web:
+  image: 'dorsaydevelopment/idealist-web:latest'
+  container_name: web
+  links:
+    - api
+  restart: always
+  
+  environment:
+    - VIRTUAL_HOST=idealist-app.com
+    - VIRTUAL_NETWORK=nginx-proxy
+    - VIRTUAL_PORT=80
+    - LETSENCRYPT_HOST=idealist-app.com
+    - LETSENCRYPT_EMAIL=dorsay@live.ca
+    # - LETSENCRYPT_TEST=true
+  volumes:
+    - ./production/web/conf.d/:/etc/nginx/conf.d
+  
+db:
+  image: 'mongo:latest'
+  container_name: db
+  volumes:
+    - /volumes/idealist/db:/data/db
+  ports:
+    - '27017:27017'
